--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Crawler.jar
+dist.jar=${dist.dir}/BrokenLinkDetector2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jsoup-1.8.3.jar=/Users/nitishchandra/Downloads/software/jsoup-1.8.3.jar
@@ -56,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=crawler.controller
+main.class=brokenlinkdetector2.BrokenLinkDetector2
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
